sashiko.dev/base/routing/sashiko-service-skeleton.yaml
# SHARED SERVICE SKELETON
# The selector is added via patches in 'routing' or 'maintenance' folders.
apiVersion: v1
kind: Service
metadata:
  name: sashiko-service
  namespace: sashiko
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    beta.cloud.google.com/backend-config: '{"default":"sashiko-backend-config"}'
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
